clusterwide-deny-all.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: deny-all
spec:
  endpointSelector: {}
  ingress:
  - {}
  egress:
  - {}
