deny-all-ingress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: deny-all
  namespace: ingress-nginx
spec:
  endpointSelector: {}
  ingress:
  - {}
  egress:
  - {}
