deny-all-kube-system.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: deny-all
  namespace: kube-system
spec:
  endpointSelector: {}
  ingress:
  - {}
  egress:
  - {}
