ingress-allow.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "allow-ingress-nginx"
  namespace: ingress-nginx
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: ingress-nginx
  ingress:
    - fromEntities:
        - world
        - kube-apiserver
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: prometheus
            io.kubernetes.pod.namespace: monitoring
      toPorts:
        - ports:
          - port: "9090"
            protocol: TCP
    - toServices:
    # Services may be referenced by namespace + name
      - k8sService:
          serviceName: hubble-ui
          namespace: kube-system
      - k8sService:
          serviceName: kube-dns
          namespace: kube-system
    - toEntities:
      - kube-apiserver
