nginx-allow-all.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "allow-ingress-nginx"
spec:
  endpointSelector: {}
